# FinalThesisMaster

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  adaptive-decision-tree-notes.tex  main.tex  mathdefs.tex  progress.md  questions.tex  ref.bib  relevant-def.tex  stochastic-knapsack-notes.tex  theoremenv.tex  title.tex  usepackages.tex
post-adapt-solver/: .gitignore  CMakeLists.txt  Makefile  README.md  analyze_lattice.py  benchmark_hk  claude.md  depth4_results.txt  gen-asym-manual-recursion.py  gen_cycle_metric.py  gen_recursive_k22.py  gen_subset_lattice.py  gen_two_circles.py  optimize_ratio.py  optimize_ratio_int.cpp  optimize_ratio_sa.cpp  search_ratio  search_ratio.cpp  search_ratio_exhaustive.cpp  search_ratio_graph.cpp  search_symmetric_gap.cpp  solver.cpp  test_correctness.cpp  test_random.cpp  topology_search.cpp  tsp_solver.h  visualize.py  visualize_policy.py
post-adapt-solver/examples/: K2nmatching-n6.json  K2nmatching-n9.json  Kn-HamiltonianCycle-7.json  Kn-HamiltonianCycle-n=10.json  Kn-HamiltonianCycle-n=11.json  Kn-HamiltonianCycle-n=12.json  Kn-HamiltonianCycle-n=3.json  Kn-HamiltonianCycle-n=4.json  Kn-HamiltonianCycle-n=5.json  Kn-HamiltonianCycle-n=6.json  Kn-HamiltonianCycle-n=7.json  Kn-HamiltonianCycle-n=8.json  Kn-HamiltonianCycle-n=9.json  Kn-moresubd.json  asym-manual-dep3-bak.json  asym-manual-dep3.json  asym-manual-dep4.json  asym-manuel-modify.json  asym-manuel.json  asym_n4_d2_ratio1.143_adapt4.0_apost3.5.json  asym_n5_d2_ratio1.200_adapt6.0_apost5.0.json  asym_n5_gpt_1.json  best_asym_n4_d2.json  best_ratio_exhaustive.json  (+100 more)
(+63 files in other folders)
